<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:orientation="vertical"
    android:padding="@dimen/padding_widget"
    android:layout_margin="@dimen/margin_widget">

    <!--
    <ImageView
        android:id="@+id/widget_colour"
        android:layout_width="6dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_icons"
        android:background="@color/white" />

    android:layout_toEndOf="@id/widget_colour"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_widget"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:layout_marginStart="2dp">

            <ImageView
                android:id="@+id/widget_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_new"
                android:contentDescription="@string/action_insert"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:id="@+id/widget_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/widget_add_note"
                android:src="@mipmap/ic_priority"
                android:contentDescription="@string/image_priority"/>

            <TextView
                android:id="@+id/widget_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_icons"
                android:layout_marginTop="@dimen/margin_icons"
                android:layout_toStartOf="@id/widget_priority"

                android:maxLines="3"
                android:text="@string/test_titel"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_title"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/widget_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </RelativeLayout>

            <TextView
                android:id="@+id/widget_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_icons"
                android:layout_marginStart="2dp"

                android:text="@string/test_inhalt"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_content"/>

    </LinearLayout>

</RelativeLayout>