<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_edit"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_edit_category"
            android:layout_width="@dimen/category_bar_width"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_edit_title"
                style="@style/edit_note_views"
                android:hint="@string/todo_edit_title"/>

            <EditText
                android:id="@+id/et_edit_description"
                style="@style/edit_note_views"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:hint="@string/todo_edit_description"
                android:gravity="top"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="6dp"
        android:padding="2dp">

        <TextView
            android:id="@+id/tv_edit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <ToggleButton
            android:id="@+id/tb_edit_priority"
            style="@style/togglebutton_menu"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:background="@drawable/selector_priority"/>

        <ToggleButton
            android:id="@+id/tb_edit_protected"
            style="@style/togglebutton_menu"
            android:layout_toEndOf="@id/tb_edit_priority"
            android:layout_marginStart="28dp"
            android:background="@drawable/selector_protected" />

        <ImageButton
            android:id="@+id/bt_edit_category"
            style="@style/imagebutton_menu"
            android:layout_toEndOf="@id/tb_edit_protected"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_flag_black_24dp"
            android:contentDescription="@string/category_dialog_title"/>

        <ImageButton
            android:id="@+id/bt_edit_save"
            android:src="@drawable/ic_action_save"
            style="@style/imagebutton_menu"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:background="@color/accent_indigo"
            android:contentDescription="@string/todo_edit_confirm" />

    </RelativeLayout>

</RelativeLayout>