<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_show_id"
        style="@style/style_note"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_show_category"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:src="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tb_show_protected"
        style="@style/tb_show_constraint"
        android:layout_marginStart="12dp"
        android:background="@drawable/selector_protected"
        app:layout_constraintStart_toEndOf="@+id/iv_show_category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_show_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/blue"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tb_show_protected"
        app:layout_constraintStart_toEndOf="@+id/tb_show_protected"
        app:layout_constraintTop_toTopOf="@+id/tb_show_protected" />

    <TextView
        android:id="@+id/tv_show_title"
        style="@style/notes_show_constraint"
        android:layout_width="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/test_titel"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_show_category"
        app:layout_constraintTop_toBottomOf="@+id/tb_show_protected" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_show_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_title">

        <TextView
            android:id="@+id/tv_show_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_inhalt"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_show_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_title" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>